css/utilities.css
.container {
  max-width: 1200px;
  width: 100%;
  margin: auto;
  padding: 1rem;
}

.flex {
  display: flex;
  justify-content: space-between;
  align-items: center;
}

.justify-center {
  justify-content: center;
}

.flex-col {
  display: flex;
  flex-direction: column;
}

.flex-wrap {
  flex-wrap: wrap;
}

.f-grow-1 {
  flex-grow: 1;
}

.flex-h-space > * {
  padding: 0 0.5rem;
}

/* Last and first items of .flex-h-space */
.flex-h-space > *:first-child {
  padding-left: 0;
}

.flex-h-space > *:last-child {
  padding-right: 0;
}

.list-none {
  list-style: none;
}

.underline {
  position: relative;
}

.underline::before {
  content: "";
  position: absolute;
  bottom: -2px;
  width: 90%;
  height: 4px;
  transform: skew(-12deg);
  background: var(--primary-color);
  z-index: -1;
  margin: auto;
  left: 0;
  right: 0;
}

.underline-none {
  text-decoration: none;
}

.a-none {
  text-decoration: none;
  color: inherit;
  padding: 0;
  margin: 0;
}

.p-1 {
  padding: 0.5rem;
}

.p-2 {
  padding: 1rem;
}

.p-3 {
  padding: 1.5rem;
}

.p-4 {
  padding: 2rem;
}

/* Horizontal padding only - level 1 */
.p-h-1 {
  padding-left: 0.5rem;
  padding-right: 0.5rem;
}

/* Horizontal padding only - level 2 */
.p-h-2 {
  padding-left: 1rem;
  padding-right: 1rem;
}

/* Horizontal padding only - level 3 */
.p-h-3 {
  padding-left: 1.5rem;
  padding-right: 1.5rem;
}

/* Horizontal padding only - level 4 */
.p-h-4 {
  padding-left: 2rem;
  padding-right: 2rem;
}

.p-v-0 {
  padding-top: 0;
  padding-bottom: 0;
}

.m-auto {
  margin: auto;
}

.m-0 {
  margin: 0;
}

.mt-0 {
  margin-top: 0;
}

.mt-1 {
  margin-top: 0.5rem;
}

.mt-2 {
  margin-top: 1rem;
}

.mt-3 {
  margin-top: 1.5rem;
}

.mt-4 {
  margin-top: 2rem;
}

.mt-5 {
  margin-top: 3rem;
}

.mt-6 {
  margin-top: 4rem;
}

.mt-7 {
  margin-top: 5rem;
}

.mt-8 {
  margin-top: 6rem;
}

.mt-9 {
  margin-top: 7rem;
}

.mb-0 {
  margin-bottom: 0;
}

.mb-1 {
  margin-bottom: 0.5rem;
}

.mb-2 {
  margin-bottom: 1rem;
}

.mb-3 {
  margin-bottom: 1.5rem;
}

.mb-4 {
  margin-bottom: 2rem;
}

.mb-5 {
  margin-bottom: 3rem;
}

.mb-6 {
  margin-bottom: 4rem;
}

.mb-7 {
  margin-bottom: 5rem;
}

.mb-8 {
  margin-bottom: 6rem;
}

.mb-9 {
  margin-bottom: 7rem;
}

.anchor {
  text-decoration: none;
  /* TODO: Extract the color to a variable in colors.css */
  color: #9b9b9b;
  font-weight: 400;
}

.col-12 {
  flex: 0 0 auto;
  width: 100%;
}

@media (min-width: 992px) {
  .col-lg-4 {
    flex: 0 0 auto;
    width: 33.33333333%;
  }
}

.position-relative {
  position: relative;
}

.shadow-sm {
  box-shadow: 0 0.125rem 0.25rem rgba(0, 0, 0, 0.075) !important;
}

.btn {
  display: inline-block;
  font-weight: 400;
  color: #fff;
  text-align: center;
  vertical-align: middle;
  background: none;
  border: solid transparent;
  padding: 0.475rem 1rem;
  font-size: 1rem;
  line-height: 1.5;
  border-radius: 0.5rem;
  cursor: pointer;
  position: relative;
  font-weight: 700;
  text-transform: uppercase;
}

.btn::before {
  content: "";
  display: block;
  position: absolute;
  top: 0;
  left: 0;
  width: 100%;
  height: 100%;
  background-color: var(--primary-color);
  border-radius: 0.5rem;
  z-index: -1;
  box-shadow: 0 4px 0 var(--primary-color-light)
}

.btn:hover {
  filter: brightness(1.2);
}


.w-50 {
  width: 50%;
}

.h-full {
  height: 100%;
}

/* Mobile styles */
@media (max-width: 768px) {
  .w-mobile-full {
    width: 100%;
  }
}

